# translate-pdf

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
jobs/: glossary.json
scripts/: debug_jobs.py  ollama_pull.sh  run_stormlight.py  worker.py
translator/: __init__.py  cli.py  config.py  crypto.py  font_utils.py  job_queue.py  pdf_io.py  render.py  translate.py  translation_memory.py
