[project]
name = "translator"
version = "0.1.0"
description = "Translate PDFs to Farsi and save as PDFs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Your Team" }]

dependencies = [
  "openai>=1.40.0",
  "pymupdf>=1.24.0",
  "arabic-reshaper>=3.0.0",
  "python-bidi>=0.4.2",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
]

[project.scripts]
translate-pdf = "translator.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["translator*"]
exclude = ["assets*", "prun*", "tests*"]
