[project]
name = "stormlight-translate"
version = "0.1.0"
description = "Translate PDFs to Farsi and save as PDFs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Your Team" }]

dependencies = [
  "openai>=1.40.0",
  "pymupdf>=1.24.0",
  "arabic-reshaper>=3.0.0",
  "python-bidi>=0.4.2",
  "pyyaml>=6.0.0",
  "tqdm>=4.66.0",
  "streamlit>=1.36.0",
  "cryptography>=41.0.0",
  "httpx>=0.24.0",
  "transformers>=4.36.0",
  "torch>=2.1.0",
  "sentencepiece>=0.1.99",
]

[project.scripts]
translate-pdf = "translator.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["translator*"]
exclude = ["assets*", "prun*", "tests*"]
